Name:                   examples
Version:                1.0.0.0
Cabal-version:          >=1.8
Tested-with:            GHC >= 7.8
Build-type:             Simple
Synopsis:               Examples using the llvm-hs library
Description:            Examples using the llvm-hs library

executable basic
  Main-is:              Main.hs
  hs-source-dirs:       basic
  build-depends:
    base               >= 4.7,
    mtl                >= 2.2,
    bytestring         >= 0.10,
    llvm-hs            >= 5.0,
    llvm-hs-pure       >= 5.0

executable orc
  Main-is:              Main.hs
  hs-source-dirs:       orc
  build-depends:
    base               >= 4.7,
    mtl                >= 2.2,
    bytestring         >= 0.10,
    llvm-hs            >= 5.0,
    llvm-hs-pure       >= 5.0

executable irbuilder
  Main-is:              Main.hs
  hs-source-dirs:       irbuilder
  build-depends:
    base               >= 4.7,
    mtl                >= 2.2,
    bytestring         >= 0.10,
    llvm-hs            >= 5.0,
    llvm-hs-pure       >= 5.0,
    text

executable arith
  Main-is:              Arith.hs
  hs-source-dirs:       arith
  build-depends:
    base               >= 4.7,
    mtl                >= 2.2,
    bytestring         >= 0.10,
    containers,
    llvm-hs            >= 5.1.2,
    llvm-hs-pure       >= 5.1,
    llvm-hs-pretty,
    deepseq,
    recursion-schemes,
    text,
    transformers
